[package]
name = "zia-client"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
fastwebsockets = { git = "https://github.com/MarcelCoding/fastwebsockets", branch = "split", default-features = false, features = ["upgrade"] }
tokio = { version = "1.32", default-features = false, features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
async-http-proxy = { version = "1.2", default-features = false, features = ["runtime-tokio", "basic-auth"] }
hyper = { version = "0.14", default-features = false, features = [] }
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
clap = { version = "4.4", features = ["derive", "env"] }
url = { version = "2.4", features = ["serde"] }
webpki-roots = "0.25"
tokio-rustls = "0.24"
once_cell = "1.18"
tracing = "0.1"
anyhow = "1.0"

zia-common = { path = '../zia-common' }

[package.metadata.generate-rpm]
assets = [
    { source = "../LICENSE", dest = "/usr/share/doc/zia-client/LICENSE", doc = true, mode = "0644" },
]
