[package]
name = "zia-client"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
tokio = { version = "1.34", default-features = false, features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
async-http-proxy = { version = "1.2", default-features = false, features = ["runtime-tokio", "basic-auth"] }
hyper = { version = "1.0", default-features = false, features = [] }
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
clap = { version = "4.4", features = ["derive", "env"] }
wsocket = { git = "https://github.com/MarcelCoding/wsocket", features = ["client", "handshake"] }
url = { version = "2.4", features = ["serde"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
webpki-roots = "0.25"
tokio-rustls = "0.24"
once_cell = "1.18"
anyhow = "1.0"
tracing = "0.1"

zia-common = { path = '../zia-common' }

[package.metadata.generate-rpm]
assets = [
  { source = "../LICENSE", dest = "/usr/share/doc/zia-client/LICENSE", doc = true, mode = "0644" },
]
