[package]
name = "zia-client"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
clap = { version = "4.4", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env"] }
tokio = { version = "1.34", default-features = false, features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
async-http-proxy = { version = "1.2", default-features = false, features = ["runtime-tokio", "basic-auth"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
tracing = { version = "0.1", default-features = false, features = ["release_max_level_info"] }
wsocket = { version = "0.2", default-features = false, features = ["client", "handshake"] }
tokio-rustls = { version = "0.25", default-features = false, features = ["ring"] }
url = { version = "2.5", default-features = false, features = ["serde"] }
once_cell = { version = "1.18", default-features = false }
rustls-pki-types = { version = "1.0", default-features = false }
webpki-roots = { version = "0.26", default-features = false }
async-trait = { version = "0.1", default-features = false }
zia-common = { path = '../zia-common', default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
anyhow = { version = "1.0", default-features = false }
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1.1", default-features = false }

[package.metadata.generate-rpm]
assets = [
  { source = "../LICENSE", dest = "/usr/share/doc/zia-client/LICENSE", doc = true, mode = "0644" },
]
