[package]
name = "zia-common"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
tokio = { version = "1.34", default-features = false, features = ["net", "sync"] }
hyper = { version = "1.0", default-features = false, features = [] }
wsocket = { git = "https://github.com/MarcelCoding/wsocket" }
tracing = "0.1"
anyhow = "1.0"
