[package]
name = "zia-common"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
tokio = { version = "1.34", default-features = false, features = ["sync"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
wsocket = { version = "0.2", default-features = false }
tracing = { version = "0.1", default-features = false }
