[package]
name = "zia-common"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
tokio = { version = "1.40", default-features = false, features = ["sync"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false }
wsocket = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
