[package]
name = "zia-server"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
tokio = { version = "1.32", default-features = false, features = ["rt-multi-thread", "macros", "net","sync", "time", "signal"] }
fastwebsockets = { git = "https://github.com/MarcelCoding/fastwebsockets", branch = "split", default-features = false, features = ["upgrade"] }
hyper = { version = "0.14", default-features = false, features = ["tcp"] }
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
clap = { version = "4.4", features = ["derive", "env"] }
webpki-roots = "0.25"
pin-project = "1.1"
once_cell = "1.18"
tracing = "0.1"
anyhow = "1.0"

zia-common = { path = '../zia-common' }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["target/release/zia-server", "/usr/bin/zia-server", "755"],
    ["debian/default", "/etc/default/zia-server", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "../LICENSE", dest = "/usr/share/doc/zia-server/LICENSE", doc = true, mode = "0644" },
]
