[package]
name = "zia-server"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcel <https://m4rc3l.de>"]
license = "AGPL-3.0"
description = "Proxy udp over websocket, useful to use Wireguard in restricted networks."

[dependencies]
clap = { version = "4.4", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env"] }
tokio = { version = "1.37", default-features = false, features = ["macros", "rt-multi-thread", "signal", "io-util"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
tracing = { version = "0.1", default-features = false, features = ["release_max_level_info"] }
wsocket = { version = "0.3", default-features = false, features = ["upgrade"] }
hyper = { version = "1.2", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
pin-project-lite = { version = "0.2", default-features = false }
http-body-util = { version = "0.1", default-features = false }
zia-common = { path = '../zia-common', default-features = false }
anyhow = { version = "1.0", default-features = false }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
  ["target/release/zia-server", "/usr/bin/zia-server", "755"],
  ["debian/default", "/etc/default/zia-server", "644"]
]

[package.metadata.generate-rpm]
assets = [
  { source = "../LICENSE", dest = "/usr/share/doc/zia-server/LICENSE", doc = true, mode = "0644" },
]
